k8s/delivery-api.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: delivery-api
spec:
  replicas: 2
  selector:
    matchLabels:
      component: deliveryapi
  template:
    metadata:
      labels:
        component: deliveryapi
    spec:
      containers:
        - name: deliveryapi
          image: delivery/api
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 4401
