k8s/deliveryorders.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deliveryorders
  namespace: gocloud
spec:
  replicas: 1
  selector:
    matchLabels:
      component: deliveryorders
  template:
    metadata:
      labels:
        component: deliveryorders
    spec:
      containers:
        - name: deliveryorders
          image: delivery/orders:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 4403
          volumeMounts:
            - name: migrationorders
              mountPath: /api/migrations/orders/
      volumes:
        - name: migrationorders
          configMap:
            name: migrationorders
---
apiVersion: v1
kind: Service
metadata:
  name: deliveryorders
  namespace: gocloud
spec:
  ports:
    - port: 4403
      targetPort: 4403
      protocol: TCP
  selector:
    component: deliveryorders

# kubectl apply -f k8s/deliverynotifications.yml
