k8s/deliveryapi.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deliveryapi
  namespace: gocloud
spec:
  replicas: 1
  selector:
    matchLabels:
      component: deliveryapi
  template:
    metadata:
      labels:
        component: deliveryapi
    spec:
      containers:
        - name: deliveryapi
          image: delivery/api:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 4401
---
apiVersion: v1
kind: Service
metadata:
  name: deliveryapi
  namespace: gocloud
spec:
  ports:
    - port: 4401
      targetPort: 4401
      protocol: TCP
  selector:
    component: deliveryapi
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: deliveryapi
  namespace: gocloud
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    # nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: delivery.local
      http:
        paths:
          - path: /?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: deliveryapi
                port:
                  number: 4401

# kubectl apply -f k8s/deliveryapi.yml
